# sloppy-paper-checker

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  DEPLOYMENT.md  LICENSE  Makefile  PLAN.md  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260716_0001_initial.py  20260720_0002_report_publication.py  20260720_0003_analysis_quota_fields.py
backend/src/sloppy_checker/: __init__.py  export_openapi.py  job.py  main.py  tasks.py
backend/src/sloppy_checker/api/: routes.py
backend/src/sloppy_checker/core/: config.py  database.py  dispatch.py  evaluation.py  ingest.py  methodology.py  observability.py  publication.py  repository.py  retention.py  reuse.py  rubrics.py  schemas.py  scoring.py  security.py  storage.py
backend/src/sloppy_checker/evidence/: adapters.py  resolver.py
backend/src/sloppy_checker/methodologies/: scientific-paper-review-v1.yaml
backend/src/sloppy_checker/methodologies/prompts/: reviewer-v1.md  worker-v1.md
backend/src/sloppy_checker/workflows/: analysis.py  routing.py
backend/tests/: conftest.py  test_adapters.py  test_api.py  test_evaluation.py  test_evaluation_observability.py  test_ingest_security.py  test_retention.py  test_routing.py  test_scoring.py  test_showcase_examples.py  test_web_contracts.py  test_workflow.py
backend/tests/fixtures/: lancet_2017_32802.json
docs/: architecture.md  data-sources.md  limitations.md  nebius.md  scoring.md
evaluation/: evaluate.py
evaluation/corpus/: README.md  manifest.json  regression_reports.json
extension/: eslint.config.js  options.html  package-lock.json  package.json  playwright.config.ts  report.html  sidepanel.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts
extension/e2e/: extension.spec.ts
extension/public/: manifest.json
extension/src/: background.ts  options.tsx  report.tsx  sidepanel.tsx  style.css
scripts/: finalize_showcase.py  generate_showcase.py  parse_showcase_pdf.mjs  validate_showcase.py
web/: Caddyfile  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+47 files in other folders)
