[project]
name = "sloppy-paper-checker"
version = "0.1.0"
description = "Evidence-linked scientific paper analysis service"
requires-python = ">=3.12,<3.15"
dependencies = [
  "agno>=2.0,<3",
  "celery[redis]>=5.4,<6",
  "cryptography>=44,<46",
  "defusedxml>=0.7,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openai>=1.66,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<7",
  "python-multipart>=0.0.20,<1",
  "redis>=5,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sloppy_checker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["B008", "E501", "S101", "S105"]
