[project]
name = "sloppy-paper-checker"
version = "0.1.0"
description = "Evidence-linked scientific paper analysis service"
requires-python = ">=3.12,<3.15"
dependencies = [
  "agno>=2.0,<3",
  "alembic>=1.14,<2",
  "boto3>=1.35,<2",
  "defusedxml>=0.7,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openai>=1.66,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "nebius>=0.3,<1",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
  "opentelemetry-api>=1.36,<2",
  "opentelemetry-sdk>=1.36,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.36,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sloppy_checker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["B008", "E501", "S101", "S105"]
